--- a/frontend/property-details.html
+++ b/frontend/property-details.html
@@ -140,7 +140,7 @@
           
           <div class="main-content">
             <span id="property-category" class="category">Apartment</span>
-            <h4 id="property-price-display" class="property-price">₱2,264,000</h4>
+            <h4 id="property-price-display" class="property-price">2,264,000</h4>
             <h4 id="property-name">24 New Street Miami, OR 24560</h4>
             <p id="property-description">Get <strong>the best property finder</strong> platform for your real estate needs. Nest Finder provides you with <a href="https://www.google.com/search?q=best+real+estate+platforms" target="_blank">comprehensive property listings</a> and expert guidance. Discover your perfect home with our easy-to-use search and scheduling tools.
             
