Fixed Schedule a Visit Buttom

--- a/frontend/property-details.html
+++ b/frontend/property-details.html
@@ -278,7 +278,7 @@
               </li>
             </ul>
           </div>
-          <div class="main-button" style="margin-top: 30px; text-align: center;">
+          <div class="main-button schedule-visit" style="margin-top: 30px;">
             <a href="#" id="schedule-visit-btn" aria-label="Schedule a visit"><i class="fa fa-calendar"></i> Schedule a Visit</a>
           </div>
         </div>
