--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
   </div>
   <!-- ***** Preloader End ***** -->
 
-  <div class="sub-header"
+  <div class="sub-header">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-8">
@@ -211,7 +211,7 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="left-image">
-            <img src="assets/images/featured.jpg" alt="">
+            <img src="assets/images/house-property-08.jpeg" alt="">
             <a href="property-details.html"><img src="assets/images/featured-icon.png" alt="" style="max-width: 60px; padding: 0px;"></a>
           </div>
         </div>
